objects/redwing__LMS_Sharing_Rule_Item__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Achievement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Achievement</label>
        <referenceTo>redwing__Achievement__c</referenceTo>
        <relationshipLabel>LMS Sharing Rule Items</relationshipLabel>
        <relationshipName>LMS_Sharing_Rule_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__LMS_Sharing_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LMS Sharing Rule</label>
        <referenceTo>redwing__LMS_Sharing_Rule__c</referenceTo>
        <relationshipLabel>LMS Sharing Rule Items</relationshipLabel>
        <relationshipName>LMS_Sharing_Rule_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Learning_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Catalog</label>
        <referenceTo>redwing__Learning_Category__c</referenceTo>
        <relationshipLabel>LMS Sharing Rule Items</relationshipLabel>
        <relationshipName>LMS_Sharing_Rule_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Learning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning</label>
        <referenceTo>redwing__Learning__c</referenceTo>
        <relationshipLabel>LMS Sharing Rule Items</relationshipLabel>
        <relationshipName>LMS_Sharing_Rule_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Plan</label>
        <referenceTo>redwing__Training_Plan__c</referenceTo>
        <relationshipLabel>LMS Sharing Rule Items</relationshipLabel>
        <relationshipName>LMS_Sharing_Rule_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Track__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Trac</label>
        <referenceTo>redwing__Training_Track__c</referenceTo>
        <relationshipLabel>LMS Sharing Rule Items</relationshipLabel>
        <relationshipName>LMS_Sharing_Rule_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>LMS Sharing Rule Item</label>
    <nameField>
        <displayFormat>LSRI-{000000}</displayFormat>
        <label>LMS Sharing Rule Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LMS Sharing Rule Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>